--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.15",
     "@mui/x-date-pickers": "^6.0.3",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "prop-types": "^15.8.1",
